--- a/scss/foundation/_base.scss
+++ b/scss/foundation/_base.scss
@@ -2,12 +2,12 @@
 
 
 html, body {
-    color: $navy;
+    color: $black;
     font-family: $ff;
 }
 
 a {
-    color: $navy;
+    color: $black;
 }
 
 
