--- a/scss/global/setting/_color.scss
+++ b/scss/global/setting/_color.scss
@@ -1,5 +1,11 @@
 $white: #ffffff;
-$navy: #1B224C;
+$black: #000000;
+$l-green: #B4CD93;
+$green: #00B906;
+$d-green: #298800;
+$navy: #2C3848;
+$red: #D77948;
+
 $yellow: #F5A623;
 $gray: #F8F8F8;
 $D-gray: #C3C3C3;
