--- a/scss/object/project/_blog-content.scss
+++ b/scss/object/project/_blog-content.scss
@@ -11,7 +11,7 @@
 
 .p-blog-content__cat-tag {
     display: inline-block;
-    background-color:  $navy;
+    background-color:  $black;
     padding: 0.625rem 1.5625rem;
     margin-bottom: 1.875rem;
     p {
