--- a/scss/object/project/_concept.scss
+++ b/scss/object/project/_concept.scss
@@ -2,7 +2,7 @@
 
 .p-concept {
     height: 604px;
-    background-color: $navy;
+    background-color: $black;
 }
 
 
@@ -55,7 +55,7 @@
 .p-concept-top__frame {
     padding-top: calc(1.4rem - 5px);
     padding-bottom: calc(1.4em - 5px);
-    border: 5px solid $navy;
+    border: 5px solid $black;
 }
 
 .p-concept-main {
