--- a/scss/object/project/_faq.scss
+++ b/scss/object/project/_faq.scss
@@ -18,9 +18,9 @@
 }
 
 .p-faq-item {
-    border-bottom: 1px solid $navy;
+    border-bottom: 1px solid $black;
     &:first-child {
-        border-top: 1px solid $navy;
+        border-top: 1px solid $black;
     }
 }
 
@@ -43,7 +43,7 @@
             content: "";
             display: block;
             transition: all 0.4s;
-            background: $navy;
+            background: $black;
             left: 50%;
             top: 50%;
             width: 25px;
