--- a/scss/object/project/_sidebar.scss
+++ b/scss/object/project/_sidebar.scss
@@ -16,7 +16,7 @@
 }
 
 .p-sidebar-section__ttl {
-    background-color: $navy;
+    background-color: $black;
     width: 270px;
     padding-top: 1.3125rem;
     padding-bottom: 1.3125rem;
@@ -43,7 +43,7 @@
 .p-sidebar__thumnail-wp {
     width: 100px;
     height: 70px;
-    border: 0.5px solid $navy;
+    border: 0.5px solid $black;
     overflow: hidden;
     img {
         width: 100px;
