--- a/scss/object/project/_success.scss
+++ b/scss/object/project/_success.scss
@@ -1,7 +1,7 @@
 @use "../../global" as *;
 
 .p-success {
-    background-color: $navy;
+    background-color: $black;
     height: 608px;
     padding-right: 0.5rem;
     padding-left: 0.5rem;
