--- a/scss/object/component/_c-btn.scss
+++ b/scss/object/component/_c-btn.scss
@@ -26,7 +26,7 @@
     a {
         display: inline-block;
         width: 100%;
-        color: $navy;
+        color: $black;
         line-height: 56px;
     }
 }
@@ -77,7 +77,7 @@
         width: 100%;
         height: 5px;
         border-radius: 25px;
-        background-color: $navy;
+        background-color: $black;
         transition: transform .5s ease;
         &:first-child {
             top: 0;
