--- a/scss/object/component/_c-tag-img.scss
+++ b/scss/object/component/_c-tag-img.scss
@@ -13,7 +13,7 @@
     position: absolute;
     font-size: 0.75rem;
     color: $white;
-    background-color: $navy;
+    background-color: $black;
     top: 0;
     left: 0;
     border: 1px solid #707070;
