--- a/scss/object/project/_cta.scss
+++ b/scss/object/project/_cta.scss
@@ -32,7 +32,7 @@
     padding-bottom: 1.125rem;
     margin-bottom: 1.375rem;
     color: $white;
-    @include btn-anime-l ($navy,25px);
+    @include btn-anime-l ($black,25px);
 }
 
 .p-cta_tel {
