--- a/scss/global/setting/_color.scss
+++ b/scss/global/setting/_color.scss
@@ -5,8 +5,8 @@ $green: #00B906;
 $d-green: #298800;
 $navy: #2C3848;
 $red: #D77948;
+$yellow: #FCF5B8;
 
-$yellow: #F5A623;
 $gray: #F8F8F8;
 $D-gray: #C3C3C3;
 $MD-gray:#B4B4B4;
