--- a/scss/layout/_l-header.scss
+++ b/scss/layout/_l-header.scss
@@ -1,4 +1,4 @@
-@use "../global" as *;
+@use "global" as *;
 
 .l-header {
     position: fixed;
@@ -16,6 +16,7 @@
     margin: 0 auto;
     display: flex;
     justify-content: space-between;
+    align-items: center;
 }
 
 
