--- a/scss/object/component/_c-btn.scss
+++ b/scss/object/component/_c-btn.scss
@@ -63,7 +63,6 @@
     position: relative;
     width: 50px;
     height: 30px;
-    margin-left: auto;
     border: none;
     background: transparent;
     outline: none;
@@ -71,25 +70,26 @@
     &:hover {
         opacity: .7;
     }
-    // 棒のパラメータ
-    .c-bar {
-        position: absolute;
-        width: 100%;
-        height: 5px;
-        border-radius: 25px;
-        background-color: $black;
-        transition: transform .5s ease;
-        &:first-child {
-            top: 0;
-        }
-        &:nth-child(2) {
-            top: 0;
-            bottom: 0;
-            margin: auto;
-            transition: .9s ease;
-        }
-        &:last-child {
-            bottom: 0;
-        }
+}
+
+// 棒のパラメータ
+.c-bar {
+    position: absolute;
+    width: 100%;
+    height: 5px;
+    left: 0;
+    background-color: $black;
+    transition: transform .5s ease;
+    &:first-child {
+        top: 0;
+    }
+    &:nth-child(2) {
+        top: 0;
+        bottom: 0;
+        margin: auto;
+        transition: .9s ease;
+    }
+    &:last-child {
+        bottom: 0;
     }
 }
