--- a/css_origin/style.css
+++ b/css_origin/style.css
@@ -635,7 +635,7 @@ a.next.page-numbers {
 .p-fv-copy {
   position: absolute;
   top: 50%;
-  left: 50%;
+  left: 8.5rem;
   -webkit-transform: translate(-50%, -50%);
           transform: translate(-50%, -50%);
 }
