--- a/scss/object/utility/_object-fit.scss
+++ b/scss/object/utility/_object-fit.scss
@@ -4,6 +4,6 @@
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
-    height: rem(52);
+    height: 100%;
     padding-top: 0;
 }
