--- a/scss/object/component/_c-sec-ttl.scss
+++ b/scss/object/component/_c-sec-ttl.scss
@@ -1,9 +1,13 @@
-@use "../../global" as *;
+@use "global" as *;
 
 .c-sec-ttl {
     text-align: center;
-    h2 {
-        font-size: 2.25rem;
+    h3 {
+        font-size: 2rem;
+        margin-bottom: 0.5rem;
+    }
+    p {
+        font-size: 1rem;
         font-weight: bold;
     }
 }
