--- a/css_origin/style.css
+++ b/css_origin/style.css
@@ -647,6 +647,9 @@ a.next.page-numbers {
   font-size: 4rem;
   color: #ffffff;
 }
+.p-fv-copy p:last-child {
+  margin-left: 3.5rem;
+}
 
 @media screen and (min-width:480px) {
   .p-fv {
@@ -795,6 +798,134 @@ a.next.page-numbers {
   text-decoration: underline;
 }
 
+.p-recipe {
+  background-color: #ffffff;
+  padding-top: 2rem;
+  padding-right: 0.5rem;
+  padding-bottom: 2rem;
+  padding-left: 0.5rem;
+}
+
+.p-recipe-tabs {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.p-recipe-ttl {
+  margin-bottom: 2rem;
+}
+
+.p-recipe-tab {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: end;
+  background-color: #298800;
+  color: #ffffff;
+  font-size: 0.875rem;
+  font-weight: bold;
+  height: 4rem;
+  width: calc((100% - 16px) / 5);
+  border-radius: 0 10px 0 0;
+  padding-right: 0.25rem;
+  padding-bottom: 0.5rem;
+  cursor: pointer;
+}
+.p-recipe-tab:nth-child(4) p {
+  width: 3.875rem;
+}
+.p-recipe-tab:not(:last-child) {
+  margin-right: 0.25rem;
+}
+.p-recipe-tab p {
+  margin-left: auto;
+  text-align: end;
+}
+.p-recipe-tab p span:last-child {
+  margin-left: 1rem;
+}
+
+.p-recipe-cont {
+  padding-top: 2rem;
+  padding-right: 0.5rem;
+  padding-bottom: 2rem;
+  padding-left: 0.5rem;
+  border: 2px solid #00B906;
+}
+
+.p-recipe-cont__item:not(:last-child) {
+  margin-bottom: 3.5rem;
+}
+
+.p-recipe-img {
+  height: 270px;
+}
+
+.p-recipe-img__inner {
+  position: relative;
+  border-radius: 10px 0 10px 10px;
+}
+.p-recipe-img__inner span {
+  position: absolute;
+}
+
+.p-recipe-new {
+  width: 0;
+  height: 0;
+  right: 0;
+  top: 0;
+  font-size: 1.5rem;
+  color: #ffffff;
+  border-style: solid;
+  border-width: 0 80px 80px 0;
+  border-color: transparent #D77948 transparent transparent;
+}
+.p-recipe-new p {
+  right: -80px;
+  top: 14px;
+  position: absolute;
+  -webkit-transform: rotate(45deg);
+          transform: rotate(45deg);
+}
+
+.p-recipe-tag {
+  left: 0;
+  bottom: 1rem;
+  font-size: 2rem;
+  color: #ffffff;
+  background-color: #298800;
+  padding-top: 0.25rem;
+  padding-right: 1rem;
+  padding-bottom: 0.25rem;
+  padding-left: 1rem;
+  border-radius: 0 0.5rem 0 0;
+}
+
+.p-recipe-coming {
+  left: 0;
+  top: 0;
+  color: #ffffff;
+  background-color: #D77948;
+  font-size: 1.5rem;
+  padding: 0.5rem;
+}
+
+.p-recipe-txt {
+  padding-top: 1rem;
+}
+
+.p-recipe-txt__exc {
+  font-size: 1rem;
+  margin-bottom: 0.5rem;
+}
+
+.p-recipe-txt__ttl {
+  font-size: 1.375rem;
+}
+
 .u-dn {
   display: none;
 }
@@ -840,6 +971,10 @@ a.next.page-numbers {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+}
+
+.is-hide {
+  display: none;
 }
 
 .is-closed {
@@ -891,8 +1026,16 @@ a.next.page-numbers {
           transform: rotate(-135deg);
 }
 
+.is-select {
+  background-color: #00B906;
+}
+
 .u-mb__24 {
   margin-bottom: 24px;
+}
+
+.u-ml24 {
+  margin-left: 1.5rem;
 }
 
 .object-fit {
