--- a/css_origin/style.css
+++ b/css_origin/style.css
@@ -848,6 +848,28 @@ a.next.page-numbers {
   margin-left: 1rem;
 }
 
+.p-recipe-wrap .p-recipe-tab {
+  background: #298800;
+  -webkit-transition: all 0.2s ease 0s;
+  transition: all 0.2s ease 0s;
+}
+
+.p-recipe-tab:hover {
+  background-color: #00B906;
+}
+
+.p-recipe-tab.active {
+  background: #00B906;
+}
+
+.p-recipe-cont__list {
+  display: none;
+}
+
+.p-recipe-cont__list.active {
+  display: block;
+}
+
 .p-recipe-cont {
   padding-top: 2rem;
   padding-right: 0.5rem;
@@ -928,29 +950,6 @@ a.next.page-numbers {
 
 .p-recipe-txt__ttl {
   font-size: 1.375rem;
-}
-
-.tab_box .tab_btn {
-  background: #298800;
-  -webkit-transition: all 0.2s ease 0s;
-  transition: all 0.2s ease 0s;
-}
-
-.tab_box .tab_btn:hover {
-  background-color: #00B906;
-}
-
-.tab_btn.active {
-  background: #00B906;
-  color: #ffffff;
-}
-
-.tab_box .tab_panel {
-  display: none;
-}
-
-.tab_panel.active {
-  display: block;
 }
 
 .u-dn {
