--- a/scss/object/project/_recipe.scss
+++ b/scss/object/project/_recipe.scss
@@ -56,9 +56,9 @@
     }
 }
 //////////////////////////////
-.p-recipe-tab.active {
-    background: $green;
-}
+// .p-recipe-tab.is-tab-active {
+//     background: $green;
+// }
 
 .p-recipe-cont__list {
     display: none;
@@ -67,6 +67,9 @@
 .p-recipe-cont__list.active {
     display: block;
 }
+
+
+
 
 
 .p-recipe-cont {
